Fix background size for icon mobile nav

--- a/web/app/themes/visithalland/resources/assets/styles/header/_header.scss
+++ b/web/app/themes/visithalland/resources/assets/styles/header/_header.scss
@@ -304,7 +304,7 @@
         @include themify {
             height: 24px;
             width: 24px;
-            background-size: 100%;
+            background-size: 70%;
             background-position: center;
             background-repeat: no-repeat;
             background-image: $icon;
